Overflow fix

--- a/ng-app/app/app.component.css
+++ b/ng-app/app/app.component.css
@@ -1,5 +1,5 @@
 #page-content-wrapper {
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 #sidebar-wrapper {
